--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Reading</string>
+    <string name="app_name">零下阅读</string>
     <string name="bnv_picture">图片</string>
     <string name="bnv_news">新闻</string>
     <string name="bnv_weibo">微博</string>
